# alternate_screen_wrapper

./: Cargo.toml  README.md
src/: crossterm.rs  lib.rs
