[package]
name = "alternate_screen_wrapper"
description = "enter end leave alternate screen in one line"
repository = "https://github.com/sineptic/alternate_screen_wrapper"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.29.0", optional = true, default-features = false }

[features]
crossterm = ["dep:crossterm"]
crossterm-bracketed-paste = [
    "crossterm",
    "crossterm/bracketed-paste",
    "crossterm/events",
]
